--- a/PersonalSite/_Archive/css/main.css
+++ b/PersonalSite/_Archive/css/main.css
@@ -10,7 +10,9 @@ body {
     color: #4e4e4e;
     line-height: 22px;
 }
-
+.clear {
+    clear: both;
+}
 h1,
 h2,
 h3,
@@ -20,6 +22,10 @@ h6 {
     font-weight: 600;
     font-family: 'Open Sans', sans-serif;
     color: #4e4e4e;
+}
+section #middle img {
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1 {
